kubernetes/artemis-cluster/testing/future/minecraft.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcfabric
  namespace: default
  labels:
    app: mcfabric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcfabric
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mcfabric
    spec:
      hostNetwork: true
      containers:
      - name: mcfabric
        image: itzg/minecraft-server:multiarch
        imagePullPolicy: Always
        ports:
        - containerPort: 25565
        resources:
          requests:
            cpu: "2"
            memory: 8000Mi
        volumeMounts:
        - mountPath: /data
          name: config
        - mountPath: /data/world
          name: artemisfs
          subPath: mc-fabric/worlds/1.16.4/fabric-overworld
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: mcfabric-config
      - name: artemisfs
        persistentVolumeClaim:
          claimName: afs-pvc
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: rtc
        hostPath:
          path: /dev/rtc
---
apiVersion: v1
kind: Service
metadata:
  name: mcfabric
  namespace: default
  labels:
    app: mcfabric
spec:
  type: LoadBalancer
  ports:
  - port: 25566
    protocol: TCP
  selector:
    app: mcfabric
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcfabric
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: mc.dcunhalab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mcfabric
            port:
              number: 25566
